@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>
class CrudRepository <<interface>>

title Class Diagram / As a new customer I want to know all existing plans

class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
}

class PlansController{
    +findActive() :Iterable<PlansView>
    +findActiveExternal() :Iterable<PlansView>
    }
class PlansService{
 +findAtive() :Iterable<Plans>
  +findAtiveExternal():Iterable<Plans>
 +addPlanToIterable(Iterable<Plans> plans, Plans newPlan):Iterable<Plans
}

interface PlansRepository extends CrudRepository
{
+ getPlansFromOtherAPI(String name)
+ doPlansPatchAPI(name,desiredVersion,json)
}
class PlansMapperInverse{
    +toPlansView(PlanRequest plans)
}
interface CrudRepository
{
+Iterable<T> findAll()
}

class PlansViewMapper{
    +toPlansView(Plans plans):PlansView
}
PlansController ..> PlansService: uses >
PlansController ..> Plans
PlansService ..> PlansRepository: uses >
PlansRepository ..>PlansController: HTTP API call >
PlansRepository ..> Plans: records >
PlansController ..right> PlansMapperInverse: uses >
PlansController..left> PlansViewMapper: use >


@enduml